# lonanote

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
docs/: icon.md
rust/: Cargo.toml
rust/app/: Cargo.toml  build.rs
rust/commands/src/body/: body.rs
rust/commands/src/commands/: commands.rs  commands_async.rs  commands_js.rs  commands_js_async.rs  mod.rs
rust/commands/src/context/: context.rs
rust/commands/src/handler/: from_command_args.rs  handler_async.rs
rust/commands/src/result/: result.rs
rust/core/: Cargo.toml
rust/core/src/api/: mod.rs
rust/mobile/: Cargo.toml
rust/mobile/src/: lib.rs
rust/mobile/src/commands/: invoke.rs  mod.rs
rust/node/: Cargo.toml  index.d.ts  index.js
rust/node/src/: lib.rs
ui/: .editorconfig  .gitignore  .npmrc  .prettierignore  .prettierrc.mjs  README.md  eslint.config.mjs  flutter_launcher_icons.yaml  flutter_rust_bridge.yaml  index.html  package.json  pnpm-lock.yaml  pubspec.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
ui/android/app/: build.gradle
ui/android/app/src/main/: AndroidManifest.xml
ui/integration_test/: simple_test.dart
ui/ios/Runner.xcodeproj/: project.pbxproj
ui/lib/: main.dart
ui/lib/src/rust/: frb_generated.dart
ui/linux/: CMakeLists.txt  my_application.cc
ui/linux/flutter/: generated_plugins.cmake
ui/macos/Runner.xcodeproj/: project.pbxproj
ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ui/macos/Runner/Configs/: AppInfo.xcconfig
ui/public/static/js/: preload.js
ui/rust_builder/: pubspec.yaml
ui/rust_builder/android/: build.gradle  settings.gradle
ui/rust_builder/android/src/main/: AndroidManifest.xml
ui/rust_builder/ios/: rust_lib_lonanote.podspec
ui/rust_builder/linux/: CMakeLists.txt
ui/rust_builder/macos/: rust_lib_lonanote.podspec
ui/rust_builder/windows/: CMakeLists.txt
ui/scripts/env/: .env.development
ui/scripts/plugins/perprocess/: index.ts
ui/scripts/utils/: icon.cjs
ui/src/: App.tsx  index.tsx
ui/src-rs/: Cargo.toml  Tauri.macos.toml  Tauri.toml  build.rs
ui/src-rs/capabilities/: main.json
ui/src-rs/icons/: icon.icns
ui/src-rs/src/: lib.rs
ui/src-rs/src/commands/: hello_command.rs
ui/src-rs/src/plugins/path/: mod.rs
ui/src-rs/src/plugins/store/: mod.rs  plugin.rs  store.rs
ui/src-rs/src/plugins/utils/: mod.rs  plugin.rs  utils.rs
ui/src-rs/src/utils/titlebar/: titlebar.rs
ui/src/assets/imgs/: Logo.tsx
ui/src/bindings/: index.ts
ui/src/bindings/api/: hello.ts  index.ts
ui/src/bindings/plugins/: fs.ts  index.ts  path.ts  store.ts  utils.ts
ui/src/components/: LanguageSelect.tsx  ThemeSelect.tsx
ui/src/config/: appConfig.ts  index.ts  os.ts
ui/src/css/: index.scss
ui/src/hooks/: index.ts  useDesktop.ts  useWindowSize.ts
ui/src/initialize/: index.ts  initVditor.ts  initWindow.ts
ui/src/main/: app.ts  index.ts
ui/src/main/invoke/: index.ts  invoke.ts
ui/src/main/store/: settings.ts
ui/src/pages/: index.tsx
ui/src/pages/test/: index.tsx
ui/src/preload/: index.d.ts  index.ts
ui/src/renderer/: index.html
ui/src/renderer/src/: App.tsx
ui/src/renderer/src/bindings/api/: index.ts
ui/src/renderer/src/bindings/invoke/: index.ts  invokeNode.ts  invokeTauri.ts
ui/src/renderer/src/components/: LanguageSelect.tsx  Link.tsx  ThemeSelect.tsx  Title.tsx  index.ts
ui/src/renderer/src/components/provider/: ColorModeProvider.tsx  Provider.tsx
ui/src/renderer/src/controller/workspace/: workspaceManager.ts
ui/src/renderer/src/hooks/: index.ts
ui/src/renderer/src/initialize/: index.ts  initStyles.ts
ui/src/renderer/src/pages/desktop/: routes.tsx
ui/src/renderer/src/styles/: global.css  index.scss
ui/src/renderer/typings/: index.d.ts
ui/src/typings/: index.d.ts
ui/src/utils/theme/: appTheme.tsx  index.ts
ui/windows/: .gitignore
ui/windows/flutter/: generated_plugins.cmake
ui/windows/runner/: Runner.rc  main.cpp
(+22 files in other folders)
