[workspace]
members = ["rust/app"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = ["luoluoqixi"]
repository = "https://github.com/lona-labs/lonanote"
license = ""

[workspace.dependencies]
serde = "1.0.214"
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
async-trait = "0.1.83"
anyhow = "1.0.93"
log = "0.4.22"

flutter_rust_bridge_codegen = { version = "=2.6.0" }
flutter_rust_bridge = "=2.6.0"

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Remove debug symbols
